ADD_SUBDIRECTORY(lcm)
ADD_SUBDIRECTORY(messenger)

INCLUDE_DIRECTORIES(.
  ${GLIB2_MAIN_INCLUDE_DIR}
  ${GLIB2_INTERNAL_INCLUDE_DIR}
  ${GTHREAD2_MAIN_INCLUDE_DIR}
)

INCLUDE_DIRECTORIES(../external/nmea/include)
INCLUDE_DIRECTORIES(lcm)
IF(GPS_FOUND)
INCLUDE_DIRECTORIES(${GPS_INCLUDE_DIR})
ENDIF(GPS_FOUND)

PIXHAWK_EXECUTABLE(mavconn-ping mavconn-ping.cc)
PIXHAWK_LINK_LIBRARIES(mavconn-ping
  mavconn_lcm
  ${GLIB2_LIBRARY}
  ${GTHREAD2_LIBRARY}
)

PIXHAWK_EXECUTABLE(mavconn-bridge-serial mavconn-bridge-serial.cc)
PIXHAWK_LINK_LIBRARIES(mavconn-bridge-serial
  mavconn_lcm
  ${GLIB2_LIBRARY}
  ${GTHREAD2_LIBRARY}
  #${Boost_PROGRAM_OPTIONS_LIBRARY}
)

PIXHAWK_EXECUTABLE(mavconn-bridge-udp mavconn-bridge-udp.cc)
PIXHAWK_LINK_LIBRARIES(mavconn-bridge-udp
  mavconn_lcm
  ${GLIB2_LIBRARY}
  ${GTHREAD2_LIBRARY}
)

#PIXHAWK_EXECUTABLE_CONDITIONAL(mavconn-gpsd CONDITION GPS_FOUND FILES mavconn-gpsd.cc)
#PIXHAWK_LINK_LIBRARIES(mavconn-gpsd
#  mavconn_lcm
#  ${GPS_LIBRARY}
#  ${GPS_LIBRARY_OPTIMIZED}
#  #${Boost_PROGRAM_OPTIONS_LIBRARY}
#)

#PIXHAWK_EXECUTABLE(mavconn-imagestreamer mavconn-imagestreamer.cc)
#PIXHAWK_LINK_LIBRARIES(mavconn-imagestreamer
#  mavconn_lcm
#  #${Boost_PROGRAM_OPTIONS_LIBRARY}
#  ${OPENCV_CORE_LIBRARY}
#  ${OPENCV_IMGPROC_LIBRARY}
#  ${OPENCV_HIGHGUI_LIBRARY}
#  #${Boost_FILESYSTEM_LIBRARY}
#  #${Boost_SYSTEM_LIBRARY}
#  ${GLIB2_LIBRARY}
#  ${GTHREAD2_LIBRARY}
#)
